tests/lang/compile_fail/float_literal_out_of_range.kojs
# A float literal whose decimal value rounds to infinity under
# 64-bit IEEE (here ~1e400) is rejected at compile time: Float is
# finite-only, so no source literal may denote inf.

x: Float = 10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0
x.print()
